--- a/code.ipynb
+++ b/code.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -80,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def buildRepoRelations(REPO):\n",
@@ -464,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def buildRepoNet(stargazers, limit_repo):\n",
@@ -934,7 +940,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getTopNRepos(n):\n",
@@ -984,7 +992,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getPreferRepos(username):\n",
@@ -999,7 +1009,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getPreferLanguages(username):\n",
@@ -1042,7 +1054,7 @@
     "repos = getPreferRepos(user)\n",
     "print(repos)\n",
     "print(\"Programming languages \"+user+ \" is interested in\")  \n",
-    "langs = getPreferLanguages('stared')\n",
+    "langs = getPreferLanguages(user)\n",
     "print(langs)"
    ]
   },
@@ -1056,7 +1068,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getStarredUser(repoName):\n",
@@ -1072,7 +1086,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the hottest repo, who star it?"
+    "For the hottest repo, who ever star it?"
    ]
   },
   {
@@ -1090,7 +1104,8 @@
     }
    ],
    "source": [
-    "users = getStarredUser('findspark')\n",
+    "repo = hottestRepos[0][0].split('(')[0]\n",
+    "users = getStarredUser(repo)\n",
     "print(users)\n",
     "print(len(users))"
    ]
@@ -1107,7 +1122,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def repoRelationship(repo1, repo2):\n",
@@ -1129,7 +1146,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns # for Interactive plots\n",
@@ -1214,7 +1233,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "repos = [n for n in graph.nodes_iter() if graph.node_iter[n]['type'] == 'repo']\n",
@@ -1489,21 +1510,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1524,7 +1551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
