--- a/code.ipynb
+++ b/code.ipynb
@@ -49,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -80,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def buildRepoRelations(REPO):\n",
@@ -403,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def buildRepoNet(stargazers, limit_repo):\n",
@@ -755,7 +761,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getTopNRepos(n):\n",
@@ -805,7 +813,9 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getPreferRepos(username):\n",
@@ -820,7 +830,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getPreferLanguages(username):\n",
@@ -877,7 +889,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def getStarredUser(repoName):\n",
@@ -929,7 +943,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def repoRelationship(repo1, repo2):\n",
@@ -951,7 +967,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns # for Interactive plots\n",
@@ -968,11 +986,8 @@
     "    for i,v in enumerate(columns):\n",
     "        for j in range(i,length):\n",
     "            p1,p2 = repoRelationship(v,columns[j])\n",
-    "            if j == i:\n",
-    "                x[i][j] = 1\n",
-    "            else:\n",
-    "                x[i][j] = p1\n",
-    "                x[j][i] = p2\n",
+    "            x[i][j] = p1\n",
+    "            x[j][i] = p2\n",
     "    df = pd.DataFrame(x,columns = columns)\n",
     "    sns.heatmap(df,annot=True)\n",
     "#     plt.figure(figsize=(12,10))\n",
@@ -1037,7 +1052,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def createlanguagemap():\n",
@@ -1108,7 +1125,9 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# find hottest 10 languages\n",
@@ -1147,7 +1166,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# find how many people are using the certain kind of language\n",
@@ -1213,7 +1234,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compareJSwithPy(js,py):\n",
@@ -1340,14 +1363,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1377,7 +1404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
