--- a/code.ipynb
+++ b/code.ipynb
@@ -48,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -1295,29 +1293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stats on the full graph\n",
-      "Name: \n",
-      "Type: DiGraph\n",
-      "Number of nodes: 15820\n",
-      "Number of edges: 40315\n",
-      "Average in degree:   2.5484\n",
-      "Average out degree:   2.5484\n",
-      "Stats on the extracted subgraph\n",
-      "Name: \n",
-      "Type: SubDiGraph\n",
-      "Number of nodes: 270\n",
-      "Number of edges: 2776\n",
-      "Average in degree:  10.2815\n",
-      "Average out degree:  10.2815\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1325,14 +1303,14 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"900px\"\n",
-       "            src=\"githubd3.html\"\n",
+       "            src=\"force.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1a2014a400>"
+       "<IPython.lib.display.IFrame at 0x1512dc5400>"
       ]
      },
      "metadata": {},
@@ -1345,17 +1323,15 @@
     "from IPython.display import IFrame\n",
     "from IPython.core.display import display \n",
     "from networkx.readwrite import json_graph\n",
-    "print (\"Stats on the full graph\" )\n",
-    "print (nx.info(graph))\n",
+    "\n",
+    "\n",
     "# extract users and language info\n",
     "mtsw_users = [n for n in graph if graph.node[n]['type'] == 'user'] +[n for n in graph if graph.node[n]['type'] == 'lang'] \n",
     "h = graph.subgraph(mtsw_users)\n",
-    "print (\"Stats on the extracted subgraph\" )\n",
-    "print (nx.info(h))\n",
     "# export json\n",
     "d = json_graph.node_link_data(h)\n",
-    "json.dump(d, open('githubd3.json', 'w'))\n",
-    "viz_file = 'githubd3.html'\n",
+    "json.dump(d, open('d3/force.json', 'w'))\n",
+    "viz_file = 'force.html'\n",
     "# D3 to visulize it\n",
     "display(IFrame(viz_file, '100%', '900px'))"
    ]
@@ -1404,7 +1380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
