--- a/Report/GitHubInsights.ipynb
+++ b/Report/GitHubInsights.ipynb
@@ -106,7 +106,7 @@
     "        except Exception:  \n",
     "            print(\"Encountered an error when finding follower for user: \", stargazer.login)\n",
     "        #See How many available API calls remaining\n",
-    "        print (\"API Calls Remaining\", client.rate_limiting)"
+    "        #print (\"API Calls Remaining\", client.rate_limiting)"
    ]
   },
   {
@@ -1023,15 +1023,6 @@
     "### Find Hot Programming Language\n",
     "\n",
     "What if we want to know which is the most popular language for all projects in the current map we generated? We can go through the projects and then extract the language part and put it into the counter to count, this seems easy to do, but what if we want to query how many users are programming in a particular kind of language? This requires scanning the in-degree users of each project, and finally summing up the count results. This idea requires large time complexity. A good idea at this time is to expand the map and use the language as a single node. The logic diagram of the final map is as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "[<img src=\"https://raw.githubusercontent.com/hanna1994/han1994/master/191525762986_.pic_hd.jpg\",width=400, height=400>](https://raw.githubusercontent.com/hanna1994/han1994/master/191525762986_.pic_hd.jpg)"
    ]
   },
   {
