--- a/Report/GitHubInsights.ipynb
+++ b/Report/GitHubInsights.ipynb
@@ -78,6 +78,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![avatar](https://raw.githubusercontent.com/StevenQu/PDS-Final-Project/blob/master/Resource/Untitled%20Diagram.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
